tcr: July and August